# stock-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  build_bundle.py  docker-compose.yml  purgecss_safelist.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-check.yml  ruff-autofix.yml
migrations/: README  env.py  script.py.mako
migrations/versions/: 0006_ai_memory_tables.sql  0012_engine_feedback.py  0013_evolution_log.py  0026_add_updated_timeline_to_review_recommendations.py  20260418_0001_initial_schema.py  20260422_0002_add_review_recommendations.py  20260422_0003_merge_watchlist_and_review_recommendations.py  20260503_0004_add_score_breakdown_to_thesis_snapshots.py  20260503_0005_add_portfolio_tables.py  20260504_0006_add_quantity_to_theses.py  20260504_0007_add_score_verdict_confidence_recorded_at_to_thesis_snapshots.py  20260504_0008_add_auto_reactivate_to_alerts.py  20260504_0009_add_decision_logs.py  20260504_0010_add_summary_to_thesis_reviews.py  20260504_0011_rewrite_review_recommendations.py  20260504_0012_add_score_breakdown_to_thesis_snapshots.py  20260504_0013_add_fields_to_review_recommendations.py  20260505_0014_create_investor_profiles.py  20260505_0015_add_sector_to_positions.py  20260506_0016_add_direction_to_theses.py  20260506_0017_add_signal_events.py  20260507_0018_add_thesis_trigger_fields_to_alerts.py  20260507_0019_schema_drift_cleanup_safe.py  20260508_0020_add_brief_feedback_table.py  20260508_0021_add_ai_memory_tables.py  20260516_0022_add_conviction_score_to_thesis_snapshots.py  20260516_0023_add_needs_monitoring_to_assumption_status.py  20260521_0027_add_user_signal_outcome_to_memory.py  20260524_0028_rename_thesis_direction_bullish_bearish.py  20260524_0029_merge_heads.py  20260524_0030_add_actual_entry_price_to_theses.py  20260525_0031_merge_evolution_log_and_0030.py  20260525_0032_add_watchlist_scans.py  20260526_0033_extend_enums_reviewverdict_thesisstatus.py  20260528_0034_add_alert_reaction_feedback.py  20260529_0035_add_quantity_to_decision_logs.py  20260604_0036_add_index_user_behavior_logs_user_signal.py  20260604_0037_add_snoozed_until_to_watchlist_items.py  20260604_0038_create_core_feedback_table.py  20260606_0037_wave_d1_persist_inmemory_stores.py  (+6 more)
scripts/: entrypoint.sh  migrate.sh  reset_db.sh
src/ai/: README.md  __init__.py  client.py  context_builder.py  memory_injection_listener.py  opportunity_analysis_handler.py  opportunity_screen_subscriber.py  prompt_cache.py  schemas.py  signal_engine_listener.py  trend_engine_listener.py
src/api/: README.md  __init__.py  __main__.py  app.py  deps.py
src/bot/: README.md  __init__.py  __main__.py  agenda_subscriber.py  app.py  discord_helper.py  evolution_subscriber.py  intelligence_engine_subscriber.py  invalidation_subscriber.py  opportunity_analysis_subscriber.py  position_risk_subscriber.py  post_mortem_subscriber.py  proactive_discovery_subscriber.py  proactive_watch_subscriber.py  recommendation_listener.py  scheduler.py  scheduler_outcome_filler.py  signal_reaction_listener.py  stress_test_subscriber.py  trend_prediction_subscriber.py  trend_shift_subscriber.py
src/briefing/: README.md  agenda_cache.py  agenda_scheduler.py  agenda_service.py  briefing_listener.py  formatter.py  models.py  repository.py  service.py  trend_batch_scheduler.py  trend_prediction_store.py
src/core/: README.md  __init__.py  engine.py  evolution.py  feedback.py  feedback_listener.py  intelligence_listener.py  models.py  schemas.py  signals.py  snapshot.py  user_action_listener.py
src/market/: README.md  __init__.py  breadth_service.py  market_regime.py  news_adapter.py  ohlcv_service.py  opportunity_screen_scheduler.py  opportunity_screen_service.py  opportunity_screen_subscriber.py  price_enrichment.py  proactive_discovery_service.py  quote_service.py  registry.py  registry_loader.py  registry_types.py  rrg_service.py  sector_rotation_service.py  snapshot_scheduler.py  trend_context_fetcher.py  trend_engine.py  trend_shift_detector.py  trend_synthesis_service.py  why_service.py
src/platform/: README.md  __init__.py  bootstrap.py  config.py  db.py  event_bus.py  events.py  feedback_loop_monitor.py  health.py  investor_profile.py  logging.py  scheduler_monitor.py  ttl_cache.py
src/portfolio/: README.md  __init__.py  eod_snapshot_service.py  models.py  pnl_service.py  repository.py  service.py  snapshot_listener.py  trade_usecase.py
src/readmodel/: README.md  __init__.py  attention_service.py  backtesting_service.py  cache.py  cache_subscriber.py  (+17 more)
tests/: conftest.py
tmp/: scoreBar_snippet.js
(+345 files in other folders)
