[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-agent"
version = "0.1.0"
description = "AI-native stock analysis platform for Vietnamese markets (HOSE, HNX, UPCoM)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() in function defaults — intentional
    "SIM108", # ternary vs if-else — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "structlog.*",
    "tenacity.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "src/platform/bootstrap.py",  # requires real DB to init
    "src/bot/*",                   # discord runtime — not unit-testable
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    '\.\.\.',
]
