[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-agent"
version = "0.1.0"
description = "AI-native stock analysis platform for Vietnamese markets (HOSE, HNX, UPCoM)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.2.0",
    "discord.py>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

# Tell hatchling where the packages live (src layout)
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B008",
    "SIM108",
    "UP007",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",
    "B011",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "discord.*",
    "structlog.*",
    "tenacity.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "src/platform/bootstrap.py",
    "src/bot/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    '\.\.\.',
]
